maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:3: error: not found: value random3
    var dir = random3()
              ^